--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li>Esforçado</li>
         <li>Sociavel</li>
     </ul>
+    <h2><a href="skills.html">Skills</a></h2>
     
 </body>
 </html>
